--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
+    "@plasmicapp/host": "^0.0.14",
     "@plasmicapp/loader": "^0.0.58",
     "@types/react": "^17.0.15",
     "next": "11.0.1",
