--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@arwes/animation": "^1.0.0-alpha.19",
     "@material-ui/core": "^4.12.3",
     "@plasmicapp/host": "^0.0.14",
     "@plasmicapp/loader": "^0.0.58",
