--- a/package.json
+++ b/package.json
@@ -11,26 +11,44 @@
   "dependencies": {
     "@arwes/animation": "^1.0.0-alpha.19",
     "@arwes/core": "^1.0.0-alpha.19",
+    "@arwes/design": "^1.0.0-alpha.19",
     "@arwes/sounds": "^1.0.0-alpha.19",
+    "@bit/akiran.react-slick.slider": "^0.24.0",
+    "@emotion/css": "^11.1.3",
+    "@emotion/react": "^11.4.0",
     "@material-ui/core": "^4.12.3",
-    "@plasmicapp/host": "^0.0.14",
+    "@plasmicapp/host": "^0.0.15",
     "@plasmicapp/loader": "^0.0.58",
-    "@plasmicapp/react-web": "^0.2.65",
-    "@types/react": "^17.0.15",
-    "antd": "^4.16.11",
-    "next": "11.0.1",
+    "@plasmicapp/react-web": "^0.2.67",
+    "@react-google-maps/api": "^2.1.1",
+    "@types/react": "^17.0.6",
+    "animejs": "^3.2.1",
+    "antd": "^4.15.6",
+    "enquire-js": "^0.2.1",
+    "howler": "^2.2.1",
+    "next": "10.2.0",
+    "polished": "^4.1.3",
     "react": "17.0.2",
-    "react-awesome-reveal": "^3.8.1",
+    "react-awesome-reveal": "^3.7.2",
     "react-dom": "17.0.2",
-    "react-parallax-tilt": "^1.5.54",
+    "react-parallax-tilt": "^1.5.22",
     "react-scroll-parallax": "^2.4.0",
     "react-use": "^17.2.4",
     "react-vis": "^1.11.7",
     "react-wired-elements": "^0.1.6",
-    "typescript": "^4.3.5"
+    "react-youtube": "^7.13.1",
+    "typescript": "^4.2.4"
   },
   "devDependencies": {
-    "eslint": "7.32.0",
-    "eslint-config-next": "11.0.1"
+    "@types/animejs": "^3.1.3",
+    "@types/howler": "^2.2.2",
+    "@types/react-vis": "^1.11.6"
+  },
+  "bit": {
+    "env": {
+      "compiler": "bit.envs/compilers/typescript@3.1.53"
+    },
+    "componentsDefaultDirectory": "bit/{name}",
+    "packageManager": "yarn"
   }
 }
