--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@arwes/design": "^1.0.0-alpha.19",
     "@arwes/sounds": "^1.0.0-alpha.19",
     "@bit/akiran.react-slick.slider": "^0.24.0",
+    "@bit/grommet.grommet.collapsible": "^2.11.1",
+    "@bit/lil.baseth.metamask-logo": "^0.1.0",
     "@emotion/css": "^11.1.3",
     "@emotion/react": "^11.4.0",
     "@material-ui/core": "^4.12.3",
@@ -37,6 +39,7 @@
     "react-vis": "^1.11.7",
     "react-wired-elements": "^0.1.6",
     "react-youtube": "^7.13.1",
+    "styled-components": "^5.3.0",
     "typescript": "^4.2.4"
   },
   "devDependencies": {
