--- a/package.json
+++ b/package.json
@@ -19,16 +19,21 @@
     "@emotion/css": "^11.1.3",
     "@emotion/react": "^11.4.0",
     "@material-ui/core": "^4.12.3",
+    "@material-ui/lab": "^4.0.0-alpha.60",
+    "@metamask/detect-provider": "^1.2.0",
     "@plasmicapp/host": "^0.0.15",
     "@plasmicapp/loader": "^0.0.58",
     "@plasmicapp/react-web": "^0.2.67",
     "@react-google-maps/api": "^2.1.1",
     "@types/react": "^17.0.6",
+    "@walletconnect/web3-provider": "^1.6.4",
     "animejs": "^3.2.1",
     "antd": "^4.15.6",
+    "api": "^3.3.0",
     "enquire-js": "^0.2.1",
     "howler": "^2.2.1",
     "next": "10.2.0",
+    "opensea-js": "^1.1.13",
     "polished": "^4.1.3",
     "react": "17.0.2",
     "react-awesome-reveal": "^3.7.2",
@@ -40,7 +45,8 @@
     "react-wired-elements": "^0.1.6",
     "react-youtube": "^7.13.1",
     "styled-components": "^5.3.0",
-    "typescript": "^4.2.4"
+    "typescript": "^4.2.4",
+    "web3": "^1.5.2"
   },
   "devDependencies": {
     "@types/animejs": "^3.1.3",
