--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "animejs": "^3.2.1",
     "antd": "^4.15.6",
     "api": "^3.3.0",
+    "cors": "^2.8.5",
     "enquire-js": "^0.2.1",
     "howler": "^2.2.1",
     "next": "10.2.0",
