--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start"
   },
-  "dependencies": {
+  "dependencies": {    
     "@arwes/animation": "^1.0.0-alpha.19",
     "@arwes/core": "^1.0.0-alpha.19",
     "@arwes/design": "^1.0.0-alpha.19",
@@ -33,6 +33,7 @@
     "cors": "^2.8.5",
     "enquire-js": "^0.2.1",
     "howler": "^2.2.1",
+    "metamask-react": "^2.0.2",
     "next": "10.2.0",
     "opensea-js": "^1.1.13",
     "polished": "^4.1.3",
