--- a/package.json
+++ b/package.json
@@ -20,19 +20,24 @@
     "@material-ui/core": "^4.12.3",
     "@material-ui/lab": "^4.0.0-alpha.60",
     "@metamask/detect-provider": "^1.2.0",
+    "@onramper/widget": "^2.2.3",
     "@plasmicapp/loader": "^0.0.58",
     "@plasmicapp/loader-nextjs": "^1.0.18",
     "@plasmicapp/react-web": "^0.2.67",
     "@react-google-maps/api": "^2.1.1",
     "@types/react": "^17.0.6",
     "@types/react-sticky": "^6.0.4",
-    "@walletconnect/web3-provider": "^1.6.4",
+    "@walletconnect/client": "^1.6.5",
+    "@walletconnect/qrcode-modal": "^1.6.5",
+    "@walletconnect/web3-provider": "^1.6.5",
     "animejs": "^3.2.1",
     "antd": "^4.15.6",
     "api": "^3.3.0",
     "cors": "^2.8.5",
     "enquire-js": "^0.2.1",
     "howler": "^2.2.1",
+    "isurl": "^4.0.2",
+    "lottie-react": "^2.1.0",
     "metamask-react": "^2.0.2",
     "next": "10.2.0",
     "opensea-js": "^1.1.13",
@@ -43,10 +48,12 @@
     "react-parallax-tilt": "^1.5.22",
     "react-scroll-parallax": "^2.4.0",
     "react-sticky-el": "^2.0.9",
+    "react-tooltip": "^4.2.21",
     "react-use": "^17.2.4",
     "react-vis": "^1.11.7",
     "react-wired-elements": "^0.1.6",
     "react-youtube": "^7.13.1",
+    "reactjs-popup": "^2.0.5",
     "styled-components": "^5.3.0",
     "typescript": "^4.2.4",
     "web3": "^1.5.2"
