--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start"
   },
-  "dependencies": {    
+  "dependencies": {
     "@arwes/animation": "^1.0.0-alpha.19",
     "@arwes/core": "^1.0.0-alpha.19",
     "@arwes/design": "^1.0.0-alpha.19",
@@ -33,6 +33,7 @@
     "animejs": "^3.2.1",
     "antd": "^4.15.6",
     "api": "^3.3.0",
+    "aws-sdk": "^2.1025.0",
     "cors": "^2.8.5",
     "enquire-js": "^0.2.1",
     "howler": "^2.2.1",
